minor change of API to expose configured endpoints as a List rather than Endpoint[] so that multiple types of endpoints can be configured in a typesafe way so they work nice with xbean - e.g. FileComponent can take 2 Endpoint[] properties for different kinds of endpoints
git-svn-id: https://svn.apache.org/repos/asf/incubator/servicemix/trunk/servicemix-file@454153 13f79535-47bb-0310-9956-ffa450edef68